namespaces/live.cloud-platform.service.justice.gov.uk/laa-record-link-service-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-record-link-service-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-lassie-idam-tech"
    cloud-platform.justice.gov.uk/application: "laa-record-link-service"
    cloud-platform.justice.gov.uk/owner: "LASSIE: jitesh.ladva@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-record-link-service"
    cloud-platform.justice.gov.uk/team-name: "case-ownership-transfer"
    cloud-platform.justice.gov.uk/review-after: ""
